[package]
name = "docker-vue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bollard = "0.19.3"
futures-util = "0.3.31"
paste = "1.0.15"
serde = "1.0.219"
serde_json = "1.0.142"
slint = "1.12.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
slint-build = "1.12"
